Fix the line alignment

--- a/css/main.css
+++ b/css/main.css
@@ -84,31 +84,15 @@
   align-items: center;
 }
 
-/* Website Margins */
-.margin-top {
-  margin-top: 5%;
-}
-
-.margin-top-big {
-  margin-top: 10%;
-}
-
-.margin-bottom {
-  margin-top: 5%;
-}
-
-.margin-vertical {
-  margin: 5% 0;
-}
-
 /* Horizontal Line Positions */
 .horizontal-line {
   border-width: 0;
-  height: 1px;
-  background-color: #272a31;
-  width: 100%;
-  opacity: 0.6;
-  margin: 5% 0;
+  height: 2px;
+  background-color: #ec5242;
+  width: 15%;
+  opacity: 0.9;
+  margin-bottom: 5%;
+  margin-top: 2%;
 }
 
 .full-horizontal-line {
@@ -133,4 +117,21 @@
 .btn:hover {
   opacity: 0.7;
   cursor: pointer;
+}
+
+/* Website Margins */
+.margin-top {
+  margin-top: 5%;
+}
+
+.margin-top-big {
+  margin-top: 10%;
+}
+
+.margin-bottom {
+  margin-top: 5%;
+}
+
+.margin-vertical {
+  margin: 5% 0;
 }
